# OptionPilot

./: .env.example  .gitignore  AI_INTEGRATION.md  CALCULATIONS.md  CLAUDE.md  CLI_USAGE.md  README.md  TRADING_JOURNAL.md  USER_GUIDE.md  app.py  cli.py  config.py  models.py  pyproject.toml  requirements.txt
.kiro/hooks/: auto-translation-hook.kiro.hook  code-quality-analyzer.kiro.hook  docs-sync-hook.kiro.hook
.kiro/specs/ai-options-analyzer/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/: __init__.py  ai_analyzer.py  cli_handlers.py  market_data.py  payoff_diagram.py  strategy_calculator.py  trading_journal.py  web_components.py  web_utils.py
tests/: test_ai_analyzer.py  test_cli.py  test_cli_validation.py  test_market_data.py  test_payoff_diagram.py  test_strategy_calculator.py  test_streamlit_app.py  test_trading_journal.py
